# gene-normalization

./: .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  Dockerfile.ddb  LICENSE  Pipfile  Procfile  README.md  cli.py  compose-dev.yaml  compose.yaml  gene-norm-update.sh  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.ebextensions/: 00gene_log.config  01app.config
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: checks.yaml  close_issue.yml  docker-publish.yml  github-actions.yml  release.yml  stale.yaml
analysis/: Final HGNC alt primary alias_two set method.ipynb  Final ncbiGRCh38 alt primary alias_two set method.ipynb  Final_ncbi_alt_primary_alias_two_set_method.ipynb
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
docs/: index.md  install.md  usage.md
docs/api/: index.md
docs/scripts/: generate_normalize_figure.py
docs/source/: changelog.rst  cli.rst  conf.py  contributing.rst  full_install.rst  index.rst  install.rst  normalization.rst  postgresql.rst  query_api.rst  quick_install.rst  refs.bib  search_capabilities.rst  search_endpoints.rst  usage.rst
docs/source/_static/html/: normalize_example.html  normalize_otx2p1.html
docs/source/_templates/: module_summary_inherited.rst
docs/source/api/: api.rst  database_api.rst  dynamodb_api.rst  etl_api.rst  index.rst  postgres_api.rst  query_api.rst
docs/source/api/api/: gene.database.database.rst  gene.database.dynamodb.rst  gene.database.postgresql.rst  gene.etl.exceptions.rst  gene.etl.hgnc.rst  gene.etl.ncbi.rst  gene.etl.update.rst  gene.schemas.rst
docs/source/managing_data/: dynamodb.rst  index.rst  loading_and_updating_data.rst  postgresql.rst
docs/source/normalizing_data/: index.rst  normalization.rst  sources.rst  vrs_compliance.rst
docs/source/reference/: index.rst
docs/source/reference/api/: gene.query.rst  gene.schemas.rst
docs/source/reference/api/database/: gene.database.database.rst  gene.database.dynamodb.rst  gene.database.postgresql.rst
docs/source/reference/api/etl/: gene.etl.base.rst  gene.etl.ensembl.rst  gene.etl.exceptions.rst  gene.etl.hgnc.rst  gene.etl.merge.rst  gene.etl.ncbi.rst  gene.etl.update.rst
docs/stylesheets/: custom.css
dynamodb_revisions/: add_item_type.py  add_other_id_refs.py  add_xref_refs.py
gene/: __init__.py  cli.py  database.py  main.py  query.py  schemas.py  version.py
gene/database/: __init__.py  database.py  dynamodb.py  postgresql.py
gene/database/postgresql/: add_indexes.sql  create_record_lookup_view.sql  create_tables.sql  create_tables_query.sql  drop_fkeys.sql  drop_indexes.sql
gene/etl/: __init__.py  base.py  ensembl.py  exceptions.py  hgnc.py  merge.py  ncbi.py
gene/etl/vrs_locations/: __init__.py  chromosome_location.py  sequence_location.py
gene/vrs_locations/: __init__.py  chromosome_location.py  sequence_location.py
mkdocs_plugins/: version_hook.py
src/gene/: __init__.py  cli.py  config.py  main.py  query.py  schemas.py  utils.py  version.py
src/gene/database/: __init__.py  database.py  dynamodb.py  postgresql.py  schemas.py
src/gene/database/postgresql/: add_fkeys.sql  add_indexes.sql  create_record_lookup_view.sql  create_tables.sql  delete_normalized_concepts.sql  drop_fkeys.sql  drop_indexes.sql
src/gene/etl/: __init__.py  base.py  ensembl.py  hgnc.py  merge.py  ncbi.py  update.py
src/gene/etl/vrs_locations/: chromosome_location.py
tests/: conftest.py
tests/data/etl_data/: ensembl_GRCh38_115.gff  hgnc_20241206.json  hgnc_20260424.json  ncbi_GRCh38.p14.gff  ncbi_gene_summary_20241224.tsv  ncbi_gene_summary_20260427.tsv  ncbi_history_20260421.tsv  ncbi_info_20241224.tsv  ncbi_info_20260421.tsv
tests/data/scripts/: build_ensembl_test_data.py  build_hgnc_test_data.py  build_ncbi_test_data.py
tests/unit/: test_api.py  test_database.py  test_database_and_etl.py  test_emit_warnings.py  test_endpoints.py  test_ensembl_source.py  test_hgnc_source.py  test_ncbi_source.py  test_query.py  test_schemas.py  test_utils.py
tests/unit/data/: ensembl_genes.json  genes.json  hgnc_genes.json  metadata.json  ncbi_genes.json  test_ensembl_source.py  test_hgnc_source.py
tests/unit/data/etl_data/: ensembl_104.gff3  ensembl_106.gff3  ensembl_109.gff3  ensembl_GRCh38_110.gff  ensembl_GRCh38_113.gff  hgnc_20210810.json  ncbi_GRCh38.p13.gff  ncbi_GRCh38.p14.gff  ncbi_history_20210813.tsv  ncbi_history_20241224.tsv  ncbi_info_20210813.tsv
