[project]
name = "gene-normalizer"
authors = [
    {name = "Alex Wagner"},
    {name = "Kori Kuzma"},
    {name = "James Stevenson"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
description = "VICC normalization routines for genes"
license = {file = "LICENSE"}
dependencies = [
    "pydantic==2.*",
    "fastapi",
    "uvicorn",
    "click",
    "boto3",
    "ga4gh.vrs~=2.0.0a1",
]
dynamic = ["version"]

[project.optional-dependencies]
pg = ["psycopg[binary]"]
etl = ["gffutils", "biocommons.seqrepo", "wags-tails>=0.1.1"]
test = ["pytest>=6.0", "pytest-cov", "mock", "httpx"]
dev = ["pre-commit", "ruff>=0.1.7"]
docs = [
    "sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo==2023.3.27",
    "gravis==0.1.0"
]

[project.urls]
Homepage = "https://github.com/cancervariants/gene-normalization"
Documentation = "https://gene-normalizer.readthedocs.io/en/latest/"
Changelog = "https://github.com/cancervariants/gene-normalization/releases"
Source = "https://github.com/cancervariants/gene-normalization"
"Bug Tracker" = "https://github.com/cancervariants/gene-normalization/issues"

[project.scripts]
gene_norm_update = "gene.cli:update_normalizer_db"
gene_norm_update_remote = "gene.cli:update_from_remote"
gene_norm_dump = "gene.cli:dump_database"
gene_norm_check_db = "gene.cli:check_db"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "gene.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gene.database.postgresql" = ["*.sql"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.black]
line-length = 88
extend-exclude = "^/docs/source/conf.py"

[tool.ruff]
src = ["src"]
exclude = ["docs/source/conf.py"]
# pycodestyle (E, W)
# Pyflakes (F)
# flake8-annotations (ANN)
# pydocstyle (D)
# pep8-naming (N)
# isort (I)
select = ["E", "W", "F", "ANN", "D", "N", "I"]
fixable = ["I", "F401"]

# D203 - one-blank-line-before-class
# D205 - blank-line-after-summary
# D206 - indent-with-spaces*
# D213 - multi-line-summary-second-line
# D300 - triple-single-quotes
# D400 - ends-in-period
# D415 - ends-in-punctuation
# ANN101 - missing-type-self
# ANN003 - missing-type-kwargs
# E111 - indentation-with-invalid-multiple*
# E114 - indentation-with-invalid-multiple-comment*
# E117 - over-indented*
# E501 - line-too-long*
# W191 - tab-indentation*
# *ignored for compatibility with formatter
ignore = [
    "D203", "D205", "D206", "D213", "D300", "D400", "D415",
    "ANN101", "ANN003",
    "E111", "E114", "E117", "E501",
    "W191"
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN102 - missing-type-cls
# ANN2 - missing-return-type
# ANN201 - Missing type annotation
# D301 - escape-sequence-in-docstring
# N805 - invalid-first-argument-name-for-method
"tests/*" = ["ANN001", "ANN102", "ANN2"]
"src/gene/schemas.py" = ["ANN001", "ANN201", "N805"]
"src/gene/cli.py" = ["D301"]
