[project]
name = "gene-normalizer"
authors = [
    {name = "Alex Wagner"},
    {name = "Kori Kuzma"},
    {name = "James Stevenson"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "VICC normalization routines for genes"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic==2.*",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "click",
    "boto3",
    "ga4gh.vrs>=2.2.0,<3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
pg = ["psycopg[binary]"]
etl = [
    "gffutils",
    "biocommons.seqrepo",
    "wags-tails~=0.4.0",
    "setuptools",  # pinned for 3.12 because yoyo-migrations still uses pkg_resources
]
tests = [
    "pytest>=6.0",
    "pytest-cov",
    "mock",
    "httpx",
    "pyyaml",
    "jsonschema",
    "jsonschema~=4.24",  # pin to avoid deprecation of ref resolver
    "deepdiff"
]
dev = [
    "prek>=0.2.23",
    "fastapi[standard]",
    "ruff==0.14.10",
]
docs = [
    "sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo==2023.3.27",
    "gravis==0.1.0",
    "sphinx-github-changelog==1.2.1",
    "sphinx-click==5.0.1",
]

[project.urls]
Homepage = "https://github.com/cancervariants/gene-normalization"
Documentation = "https://gene-normalizer.readthedocs.io/en/latest/"
Changelog = "https://github.com/cancervariants/gene-normalization/releases"
Source = "https://github.com/cancervariants/gene-normalization"
"Bug Tracker" = "https://github.com/cancervariants/gene-normalization/issues"

[project.scripts]
gene-normalizer = "gene.cli:cli"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gene.database.postgresql" = ["*.sql"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]
exclude = ["docs/source/conf.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# F401 - unused-import
# N805 - invalid-first-argument-name-for-method
# D100 - undocumented-public-module
# D103 - undocumented-public-function
# S101 - assert
# B011 - assert-false
# I001 - unsorted-imports
# INP001 - implicit-namespace-package
# ARG001 - unused-function-argument
# SLF001 - private-member-acces
# PLR2004 - magic-value-comparison
"tests/*" = [
    "ANN001",
    "ANN2",
    "S101",
    "B011",
    "INP001",
    "SLF001",
    "ARG001",
    "D",
    "PLR2004",
]
"*__init__.py" = ["F401"]
"gene/schemas.py" = ["ANN001", "ANN201", "N805"]
"docs/source/conf.py" = ["D100", "I001", "D103", "ANN201", "ANN001"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
