[metadata]
name = gene-normalizer
author = VICC
author_email = help@cancervariants.org
description = VICC normalization routine for genes
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/gene-normalization
license-file = LICENSE
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

install_requires =
    pydantic
    fastapi
    uvicorn
    click
    boto3
    ga4gh.vrsatile.pydantic ~= 0.0.12
    ga4gh.vrs ~= 0.8.1

tests_require =
    pytest
    pytest-cov
    mock

[options.package_data]
gene =
    database/postgresql/*

[options.entry_points]
console_scripts =
    gene_norm_update = gene.cli:update_normalizer_db
    gene_norm_update_remote = gene.cli:update_from_remote
    gene_norm_dump = gene.cli:dump_database
    gene_norm_check_db = gene.cli:check_db

[options.extras_require]
pg =
    psycopg[binary]

etl =
    gffutils
    biocommons.seqrepo

test =
    pytest
    pytest-cov
    mock

dev =
    pre-commit
    flake8
    flake8-docstrings
    ipykernel

docs =
    sphinx == 6.1.3
    sphinx-autodoc-typehints == 1.22.0

[tool:pytest]
addopts = --ignore setup.py --ignore dynamodb_local_latest/ --ignore docs/ --doctest-modules --cov-report term-missing --cov=.
