[metadata]
name = gene-normalizer
author = VICC
author_email = help@cancervariants.org
description = VICC normalization routine for genes
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/gene-normalization
project_urls =
    Documentation = https://gene-normalizer.readthedocs.io/en/latest/
    Changelog = https://github.com/cancervariants/gene-normalization/releases
    Source = https://github.com/cancervariants/gene-normalization
    Tracker = https://github.com/cancervariants/gene-normalization/issues
license_files = LICENSE
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

install_requires =
    pydantic
    fastapi
    uvicorn
    click
    boto3
    ga4gh.vrs ~= 2.0.0.dev1

tests_require =
    pytest
    pytest-cov
    mock

[options.package_data]
gene =
    database/postgresql/*

[options.entry_points]
console_scripts =
    gene_norm_update = gene.cli:update_normalizer_db
    gene_norm_update_remote = gene.cli:update_from_remote
    gene_norm_dump = gene.cli:dump_database
    gene_norm_check_db = gene.cli:check_db

[options.extras_require]
pg =
    psycopg[binary]

etl =
    gffutils
    biocommons.seqrepo

test =
    pytest
    pytest-cov
    mock

dev =
    pre-commit
    flake8
    flake8-docstrings
    ipykernel

docs =
    sphinx == 6.1.3
    sphinx-autodoc-typehints == 1.22.0
    sphinx-autobuild == 2021.3.14
    sphinx-copybutton == 0.5.2
    sphinxext-opengraph == 0.8.2
    sphinxcontrib-bibtex == 2.5.0
    furo == 2023.3.27
    gravis == 0.1.0

[tool:pytest]
addopts = --ignore setup.py --ignore dynamodb_local_latest/ --ignore docs/ --doctest-modules --cov-report term-missing --cov=.
